Issue 907: Fix small contrast issues

--- a/themes/KnihovnyCz/less/knihovny-cz.less
+++ b/themes/KnihovnyCz/less/knihovny-cz.less
@@ -1302,3 +1302,7 @@ a,
 .copybar .text-muted {
   color: #828282;
 }
+
+.leaflet-container .leaflet-control a {
+  color: #0077a7;
+}
